# OpenRender

./: .gitmodules  CMakeLists.txt
models/: GreatJaggi.mtl  dead 123456.mtl  plane.mtl  sphere.mtl  torus.mtl  torus_knot.mtl
src/: Constants.h  Light.h  SimpleScene.cpp  SimpleScene.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Timer.h  VBO.cpp  VBO.h  main.cpp
